// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: fix 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="fix"
    tabs={
      [
        {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-fix"
    className="bordered huge-spacer-bottom"
    id="tabpanel-fix"
    role="tabpanel"
  >
    <RuleDescription
      className="big-padded"
      isDefault={true}
      sections={
        [
          {
            "content": "how",
            "key": "how_to_fix",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: risk 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      [
        {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-code"
    className="bordered huge-spacer-bottom"
    id="tabpanel-code"
    role="tabpanel"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`should render correctly: vulnerability 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="vulnerability"
    tabs={
      [
        {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-vulnerability"
    className="bordered huge-spacer-bottom"
    id="tabpanel-vulnerability"
    role="tabpanel"
  >
    <RuleDescription
      className="big-padded"
      isDefault={true}
      sections={
        [
          {
            "content": "assess",
            "key": "assess_the_problem",
          },
        ]
      }
    />
  </div>
</Fragment>
`;

exports[`should render correctly: with comments or changelog element 1`] = `
<Fragment>
  <BoxedTabs
    onSelect={[Function]}
    selected="code"
    tabs={
      [
        {
          "content": <div
            className="padded"
          >
            <div>
              CodeTabContent
            </div>
          </div>,
          "key": "code",
          "label": "hotspots.tabs.code",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "cause",
                  "key": "root_cause",
                },
              ]
            }
          />,
          "key": "risk",
          "label": "hotspots.tabs.risk_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "assess",
                  "key": "assess_the_problem",
                },
              ]
            }
          />,
          "key": "vulnerability",
          "label": "hotspots.tabs.vulnerability_description",
        },
        {
          "content": <RuleDescription
            className="big-padded"
            isDefault={true}
            sections={
              [
                {
                  "content": "how",
                  "key": "how_to_fix",
                },
              ]
            }
          />,
          "key": "fix",
          "label": "hotspots.tabs.fix_recommendations",
        },
      ]
    }
  />
  <div
    aria-labelledby="tab-code"
    className="bordered huge-spacer-bottom"
    id="tabpanel-code"
    role="tabpanel"
  >
    <div
      className="padded"
    >
      <div>
        CodeTabContent
      </div>
    </div>
  </div>
</Fragment>
`;
